fix banner so that the images don't get distorted

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -170,6 +170,10 @@ img {
   }
 }
 
+.cover {
+  object-fit: cover;
+}  
+
 .carousel-control.left, .carousel-control.right {
    background-image:none;
    filter:none;
@@ -599,18 +603,29 @@ h1.contitle{
 
 /*------ CAROUSEL ------*/
 
-.carousel .item {
-  height: 500px;
-  background-color: #777;
-}
 
-.carousel-inner > .item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 500px;
-}
+  .carousel-caption {
+    margin-bottom: 120px;
+    h1 {
+      font-size: 3em;
+    }
+    p {
+      font-size: 1.3em;
+    }
+  }
+
+  .carousel .item {
+    height: 630px;
+    background-color: #777;
+  }
+
+  .carousel-inner > .item > img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-width: 100%;
+    height: 630px;
+  }
 
 
 /*------ FOOTER ------*/
@@ -654,12 +669,6 @@ h1.contitle{
 
   .btnport {
     display: block;
-  }
-
-  .carousel-caption {
-    p {
-      font-size: 1.3em;
-    }
   }
 
   form {
